  - Fix "Hello @username." references not working by no longer allowing usernames to end in period.
  -
  - Add "Reply quoting selected text" shortcut key (`r`)
  - Fix bug causing `@whatever` inside an issue's first code block to be picked up as a user mention.
  - Fix bug causing `@whatever` inside an inline code snippet (backtick-style) to be picked up as a user mention.
  -
  - Show Atom feed buttons everywhere where applicable.
  - Add project activity atom feed.
  - Don't crash when an MR from a fork has a cross-reference comment from the target project on of its commits.
  - Include commit comments in MR from a forked project.
  -
  - Add default project and snippet visibility settings to the admin web UI.
  - Fix bug where Slack service channel was not saved in admin template settings. (Stan Hu)
  - Move snippets UI to fluid layout
  - Improve UI for sidebar. Increase separation between navigation and content
  - Improve new project command options (Ben Bodenmiller)
  - Prevent sending empty messages to HipChat (Chulki Lee)
  - Improve UI for mobile phones on dashboard and project pages
  - Add room notification and message color option for HipChat

v 7.10.0
  - Ignore submodules that are defined in .gitmodules but are checked in as directories.
  - Allow projects to be imported from Google Code.
  - Remove access control for uploaded images to fix broken images in emails (Hannes Rosenögger)
  - Allow users to be invited by email to join a group or project.
  - Don't crash when project repository doesn't exist.
  - Add config var to block auto-created LDAP users.
  - Don't use HTML ellipsis in EmailsOnPush subject truncated commit message.
  - Set EmailsOnPush reply-to address to committer email when enabled.
  - Fix broken file browsing with a submodule that contains a relative link (Stan Hu)
  - Fix persistent XSS vulnerability around profile website URLs.
  - Fix project import URL regex to prevent arbitary local repos from being imported.