@@ -7,14 +7,20 @@ module DiffHelper
     end
   end
 
-  def safe_diff_files(diffs)
-    diffs.first(allowed_diff_size).map do |diff|
-      Gitlab::Diff::File.new(diff)
+  def allowed_diff_lines
+    if diff_hard_limit_enabled?
+      Commit::DIFF_HARD_LIMIT_LINES
+    else
+      Commit::DIFF_SAFE_LINES
     end
   end
 
-  def show_diff_size_warning?(diffs)
-    diffs.size > allowed_diff_size
+  def safe_diff_files(diffs)
+    lines=0
+    diffs.first(allowed_diff_size).reduce([]) do |safe_files, diff|
+      safe_files.push(Gitlab::Diff::File.new(diff)) if (lines+=diff.diff.lines.count) <= allowed_diff_lines
+      safe_files
+    end
   end
 
   def diff_hard_limit_enabled?
