@@ -14,6 +14,6 @@
           = link_to "Email patch", merge_request_path(@merge_request, format: :patch), class: "btn btn-warning btn-sm"
   %p
     To preserve performance only
-    %strong #{allowed_diff_size} of #{diffs.size}
+    %strong #{shown_files_count} of #{diffs.size}
     files are displayed.
 
