@@ -11,6 +11,7 @@ v 7.11.0 (unreleased)
   - Add "Reply quoting selected text" shortcut key (`r`)
   - Fix bug causing `@whatever` inside an issue's first code block to be picked up as a user mention.
   - Fix bug causing `@whatever` inside an inline code snippet (backtick-style) to be picked up as a user mention.
+  - Improve handling of large diffs
   -
   - Show Atom feed buttons everywhere where applicable.
   - Add project activity atom feed.
